Fixes the worst scaling on the page
Does not look as good on narrower devices/resolution

--- a/src/assets/components/Output/Output.module.css
+++ b/src/assets/components/Output/Output.module.css
@@ -8,8 +8,8 @@
   /* form */
   width: 100%;
   height: auto;
-  /* max-height: 85%; */
-  flex-grow: 2;
+  max-height: 65vh; /* this makes the responsiveness of the page better */
+  flex-grow: 3;
 
   /* colors */
   background-color: var(--palette-primary-500);
